# rust-learn

./: .gitattributes
atuo_testing/: Cargo.toml  README.md
atuo_testing/src/: lib.rs
atuo_testing/tests/: common1.rs  integration_test.rs
atuo_testing/tests/common/: mod.rs
cargo_crates/: Cargo.toml
cargo_crates/src/: lib.rs  main.rs
concurrency/src/: main.rs
lab/lab1/src/: lab1.rs  main.rs
patterns_match/src/: lib.rs
project1/atuo_testing/: Cargo.toml
project1/atuo_testing/src/: adder.rs
project1/cargo_crates/: Cargo.toml
project1/cargo_crates/add/adder/: Cargo.toml
project1/collection/: Cargo.toml
project1/collection/src/: lib.rs  main.rs
project1/concurrency/src/: main.rs
project1/enumer/src/: enumera.rs  main.rs
project1/error_handling/: Cargo.toml
project1/error_handling/src/: lib.rs  main.rs
project1/functional_features/: Cargo.toml  output.txt
project1/functional_features/src/: lib.rs  main.rs  study13.rs
project1/funtions/src/: main.rs
project1/generics_trait_life/: Cargo.toml
project1/generics_trait_life/src/: lib.rs  main.rs
project1/hello_cargo/: Cargo.toml
project1/io_code/: Cargo.toml  output.txt
project1/manage_project/: Cargo.toml
project1/patterns_match/: Cargo.toml
project1/restaurant/: Cargo.toml
project1/smart_pointer/: Cargo.toml
project1/structp/: Cargo.toml
project1/study_mark/: stu15-0.md  stu16-0.md  stu17-0.md
study_mark/: h.c  h1.c  stu14-0.md  stu15-0.md  stu16-0.md  stu18-0.md  web_sever.md
web_sever/hello/: Cargo.toml
what_is_oo/: Cargo.toml
what_is_oo/src/: main.rs
(+22 files in other folders)
